[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Hi! I am Hem Kumar Rao, I like doing things in a different way.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
